# DataManager

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEBASE_DOCS.md  Dockerfile  GEMINI.md  README.md  cli.py  client.py  docker-compose.yml  logger.py  main.py  network_server.py  pyproject.toml  requirements.txt
.agents/workflows/: deploy.md
.claude/: settings.json
.github/workflows/: docker-publish.yml
core/: server.py
data_management/: processor.py  storage.py
docs/: ARCHITECTURE.md  MIGRATION.md
fetchers/: __init__.py  base.py  dukascopy_fetcher.py  openbb_fetcher.py
metadata/: catalog.json  dukas_assets.csv  scheduler_jobs.json
src/datamanager/: __init__.py  cli.py  client.py  main.py
src/datamanager/api/: router.py
src/datamanager/core/: config.py
src/datamanager/db/: processor.py  storage.py
src/datamanager/fetchers/: __init__.py  base.py  ccxt.py  dukascopy.py  openbb.py
src/datamanager/schemas/: __init__.py
src/datamanager/services/: manager.py  scheduler.py
src/datamanager/utils/: logger.py  retry.py
tests/: test_processor.py  test_storage.py
tests/integration/: conftest.py  test_cli.py
tests/unit/: test_api.py  test_cli.py  test_client.py  test_config.py  test_fetchers.py  test_logger.py  test_manager.py  test_processor.py  test_retry.py  test_scheduler.py  test_storage.py
