[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datamanager"
version = "1.2.0"
description = "Financial OHLCV data management system with CLI and REST API"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "dukascopy-python>=4.0.1",
    "fastapi>=0.128.0",
    "fastparquet>=2025.12.0",
    "openbb>=4.7.0",
    "openbb-yfinance>=1.6.0",
    "pandas>=3.0.1",
    "python-dateutil>=2.9.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
    "uvicorn>=0.40.0",
    "pydantic-settings>=2.9.0",
    "pydantic>=2.12.5",
    "apscheduler>=3.10.0,<4.0",
]

[project.scripts]
datamanager = "datamanager.main:main"

[project.optional-dependencies]
crypto = ["ccxt>=4.0.0"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=7.4.0",
    "ruff>=0.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/datamanager"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/datamanager/cli.py" = ["E501", "W291", "W293"]  # ASCII art banner

[tool.ruff.lint.isort]
known-first-party = ["datamanager"]
